<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contato Adaptativo</string>
    <string name="edit_secondary_collapse" msgid="5371618426594477103">"Mais"</string>
    <string name="description_contact_photo" msgid="3387458082667894062">"foto do contato"</string>
    <string name="description_minus_button" msgid="387136707700230172">"menos"</string>
    <string name="menu_done" msgid="796017761764190697">"Concluído"</string>
    <string name="menu_doNotSave" msgid="2174577548513895144">"Reverter"</string>
    <string name="choose_profile">Escolha o seu perfil:</string>
    <string name="low_education">Perfil: Até a 4ª série</string>
    <string name="high_education">Perfil: Além da 4ª série</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="back">Voltar</string>
    <string name="next">Próximo</string>
    <string name="voice">Voz</string>
    <string name="exit">Sair</string>
    <string name="insert_name">Informe o Nome</string>
    <string name="insert_first_name">Informe o Primeiro Nome</string>
    <string name="insert_family_name">Informe o Sobrenome</string>
    <string name="insert_phone">Informe o Número</string>
    <string name="insert_address">Informe o Endereço</string>
    <string name="insert_email">Informe o E-mail</string>
    <string name="insert_number">Continuar</string>
    <string name="insert_other_info">Informe outras informações</string>
    <string name="insert_photo">Escolha a Foto</string>
    <string name="first_name">Primeiro Nome</string>
    <string name="family_name">Sobrenome</string>
    <string name="phone">Telefone</string>
    <string name="address">Endereço</string>
    <string name="email">E-mail</string>
    <string name="finished">Terminei</string>
    <string name="change">Mudar</string>
    <string name="complete">Concluir</string>
    <string name="contact_saved">Contato salvo com sucesso</string>
    <string name="contact_unsaved">Erro: Não foi possível salvar o contato</string>
    <string name="error_name">Informe o nome do contato</string>
    <string name="error_first_name">Informe o primeiro nome do contato</string>
    <string name="error_family_name">Informe o sobrenome do contato</string>
    <string name="error_phone">Para informar o número do contato, clique em Informe o Número</string>
    <string name="error_phone1">Número inválido. Deseja salvar assim mesmo?</string>
    <string name="error_email">Informe o e-mail do contato</string>
    <string name="error_email1">E-mail inválido</string>
    <string name="error_address">Informe o endereço do contato</string>
    <string name="error_photo">Escolha a foto do contato clicando na foto</string>
    <string name="save_without_fone">Deseja salvar o contato sem o telefone?</string>
    <string name="cancel_send_photo">Desistiu de enviar a foto?</string>
    <string name="cancel_action">Desistiu de salvar o contato?</string>
    <string name="add_more_info">Deseja inserir mais informações?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_teste">Teste</string>
    
    <string name="voice_recognition">Reconhecimento de Voz</string>
    <string name="elderly_name">Elderly Name</string>
    <string name="ok">Ok</string>

    <string name="tagName">Nome</string>
    <string name="tagPhone">Telefone</string>
    <string name="tagAddress">Endereço</string>
    <string name="tagEmail">E-mail</string>
    <string name="tagFirstName">Primeiro Nome</string>
    <string name="tagFamilyName">Sobrenome</string>
    
</resources>